--- a/cube.html
+++ b/cube.html
@@ -21,11 +21,11 @@
 
     // Load image textures for all faces
     const textureLoader = new THREE.TextureLoader();
-    const frontTexture = textureLoader.load('img/fruits.jpg');  // Replace with child-friendly image
-    const backTexture = textureLoader.load('img/panda.jpg');    // Replace with child-friendly image
-    const leftTexture = textureLoader.load('img/panda.jpg');    // Replace with child-friendly image
-    const rightTexture = textureLoader.load('img/tiger.jpg');
-    const topTexture = textureLoader.load('img/octopus.jpg');   // Replace with child-friendly image
+    const frontTexture = textureLoader.load('fruits.jpg');  // Replace with child-friendly image
+    const backTexture = textureLoader.load('stars.jpg');    // Replace with child-friendly image
+    const leftTexture = textureLoader.load('panda.jpg');    // Replace with child-friendly image
+    const rightTexture = textureLoader.load('tiger.jpg');
+    const topTexture = textureLoader.load('octopus.jpg');   // Replace with child-friendly image
 
     // Load materials using the textures for each side
     const materials = [
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
