--- a/cube.html
+++ b/cube.html
@@ -37,7 +37,7 @@
       new THREE.MeshBasicMaterial({ color: 0xaaaaaa }),   
     ];
 
-    const geometry = new THREE.BoxGeometry(10, 10, 10); /
+    const geometry = new THREE.BoxGeometry(10, 10, 10); 
     const cube = new THREE.Mesh(geometry, materials);
     scene.add(cube);
 
